# flatguard

./: .gitignore  CMakeLists.txt  README.md
src/: color.h  main.cpp
src/audit/: auditor.cpp  auditor.h
src/flatpak/: fs_permissions.cpp  fs_permissions.h  override.cpp  override.h  parser.cpp  parser.h
src/utils/: ini_utils.cpp  ini_utils.h
tests/: test_auditor.cpp  test_fs_permissions.cpp  test_override.cpp  test_parser.cpp
